--- a/calculator.html
+++ b/calculator.html
@@ -1,211 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Калькулятор зарплаты Армения</title>
-	<link rel="icon" href="https://cdn.veeam.com/content/dam/veeam/global/favicon_16x16px.ico" sizes="16x16"/>
-  </head>
-  <body class="calculate">
-  <header class="calculate__header">
-  <h1 class="calculate__title">Калькулятор зарплаты в Армении</h1>
-  </header>
-  <main class="calculate__main">
-  <label class="calculate__label" for="grosssalary">Введите зарплату gross</label>
-  <div class="calculate__container">
-  <input class="calculate__input" type="number" id="grosssalary" value="1000000">
-  <button class="calculate__button" type="button" id="calculate" onclick="resultToDiv()">Рассчитать!</button>
-  </div>
-  <div class="calculate__result">Зарплата net: <span class="calculate__netsalary" id="netsalary"></span> драм</div>
-  </main>
-  <footer class="calculate__footer">
-  <div class="calculate__footer-container">
-  <p class="calculate__footer-text">©2023 | Калькулятор зарплаты</p>
-  </div>
-  </footer>
-  </body>
-  
-  <style>
-  @import url('https://fonts.cdnfonts.com/css/guardian-sans');
-  
-  * {
-  box-sizing: border-box;
-  }
-  
-  html {
-  height: 100%;
-  }
-  
-  .calculate {
-    font-family: 'Guardian Sans', sans-serif;
-	font-size: 16px;
-	line-height: 24px;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    min-width: 320px;
-	margin: 0;
-	color: #232323;
-  }
-    
-  .calculate__header {
-  padding: 100px 15px;
-	background-image: linear-gradient(180deg, #ffffff, #e9e9e9);
-    border-color: #b0b0b0;
-	width: 100%;
-  }
-  .calculate__title {
-  max-width: 1230px;
-  margin: 0 auto;
-  font-size: 50px;
-  line-height: 60px;
-  }
-  .calculate__main {
-  flex-grow: 1;
-  width: 100%;
-  max-width: 1230px;
-  margin: 0 auto;
-  padding: 80px 15px;
-  }
-  .calculate__label {
-  font-size: 16px;
-  display: block;
-  margin-bottom: 4px;
-  font-family: 'Guardian Sans', sans-serif;
-  }
-  
-  .calculate__container {
-  display: flex;
-  margin-bottom: 32px;
-  }
-  
-  .calculate__input {
-    font-family: 'Guardian Sans', sans-serif;
-    font-size: 24px;
-    line-height: 28px;
-    cursor: text;
-    padding: 6px 12px; 
-	margin-right: 30px;
-	outline-offset: 0;
-    outline: none;
-	-webkit-appearance: none;
-    appearance: none;
-	border: #707070 1px solid;
-  }
-  .calculate__input:focus {
-    background: rgba(0,0,0,.05);
-	outline: #707070 1px solid;
-  }
-  
-  .calculate__button {
-    font-family: 'Guardian Sans', sans-serif;
-    background: linear-gradient(270deg,#35b746 50%,#9adf35);
-    background-size: 200% 100%;
-    color: #fff;
-    max-width: 360px;
-    -webkit-appearance: none;
-    appearance: none;
-    border-radius: 6px;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 24px;
-    min-width: 160px;
-    outline: none;
-    padding: 12px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: all .3s ease-in-out;
-	border: none;
-  }
-  
-  input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button {
-    display: none; 
-  }
-  
-  .calculate__button:hover {
-  background-position: 100% 0;
-  }
-  
-  .calculate__result {
-  font-size: 24px;
-  line-height: 28px;
-  }
-  
-  .calculate__netsalary {
-   font-weight: 600;
-  }
-  
-  @media (max-width: 767px) {
-  .calculate {width: 100%;}
-  .calculate__container {display: block}
-  .calculate__input {margin-bottom: 24px}
-  .calculate__title {font-size: 36px; line-height: 40px;}
-  .calculate__header {padding: 80px 15px}
-  }
-  
-  .calculate__footer {
-   width: 100%;
-   background: #f9f9f9;
-   padding: 30px 15px;
-  }
-  
-  .calculate__footer-container {
-  max-width: 1260px;
-  margin: 0 auto;
-  }
-  
-  .calculate__footer-text {
-  text-align: center;
-  font-size: 14px;
-  }
-  </style>
-  
- <script>
- function getNetSalary(grossSalary) {
-  let incomeTax = grossSalary * 0.2;
-  let socialContribution;
-  if (grossSalary >= 1125000) {
-    socialContribution = 1125000 * 0.1 - 25000;
-  } else if (grossSalary >= 500000) {
-    socialContribution = grossSalary * 0.1 - 25000;
-  } else {
-    socialContribution = grossSalary * 0.05;
-  }
-  ;
-  let stampFee;
-  if (grossSalary <= 100000) {
-    stampFee = 1500;
-  } else if (grossSalary <= 200000) {
-    stampFee = 3000;
-  } else if (grossSalary <= 500000) {
-    stampFee = 5500;
-  } else if (grossSalary <= 1000000) {
-    stampFee = 8500;
-  } else {
-    stampFee = 15000;
-  }
+    <title>Калькулятор зарплаты в Армении</title>
+    <link rel="icon" href="favicon.ico" sizes="32x32"/>
+    <link rel="stylesheet" href="source/css/styles.css">
+</head>
+<body class="calculate">
+<header class="calculate__header">
+    <h1 class="calculate__title">Калькулятор зарплаты в Армении</h1>
+</header>
+<main class="calculate__main">
+    <label class="calculate__label" for="grosssalary">Введите зарплату gross</label>
+    <div class="calculate__container">
+        <input class="calculate__input" type="number" id="grosssalary" value="1000000">
+        <button class="calculate__button" type="button" id="calculate" onclick="resultToDiv()">Рассчитать!</button>
+    </div>
+    <div class="calculate__result">Зарплата net: <span class="calculate__netsalary" id="netsalary"></span> драм</div>
+</main>
+<footer class="calculate__footer">
+    <div class="calculate__footer-container">
+        <p class="calculate__footer-text">©2023 | Калькулятор зарплаты</p>
+    </div>
+</footer>
+</body>
 
-  let netSalary = grossSalary - incomeTax - socialContribution - stampFee;
-  return netSalary;
-}
-
-  let input = document.querySelector('#grosssalary');
-  let grossSalary;
-  input.onchange = function () {
-  grossSalary = input.value;
-  return grossSalary;
-  };
-  grossSalary = input.value;
-
-  document.getElementById("netsalary").innerHTML = getNetSalary(grossSalary);
-
-  function resultToDiv() {
-  document.getElementById("netsalary").innerHTML = Math.floor(getNetSalary(grossSalary));
-}
- </script>
- </html>
+<script src="source/js/scripts.js"></script>
+</html>
