--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор зарплаты в Армении</title>
+    <meta name="description" content="С помощью этой тулзы вы сможете высчитать чистую зарплату в Армении">
+    <meta name="keywords" content="Калькулятор зарплат Армения, чистая зп Армения">
     <link rel="icon" href="favicon.ico" sizes="32x32"/>
     <link rel="stylesheet" href="source/css/styles.css">
 </head>
