form submit updated

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <div class="calculate__wrapper">
         <label class="calculate__label" for="grosssalary">Введите зарплату gross</label>
         <div class="calculate__container">
+            <form action="javascript:resultToDiv()">
             <input class="calculate__input" type="number" id="grosssalary" value="1000000">
-            <button class="calculate__button" type="button" id="calculate" onclick="resultToDiv()">Рассчитать!</button>
+            <button class="calculate__button" type="submit" id="calculate" >Рассчитать!</button>
+            </form>
         </div>
         <div class="calculate__result">Зарплата net: <span class="calculate__netsalary" id="netsalary"></span> драм
         </div>
