--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="calculate__wrapper">
         <label class="calculate__label" for="grosssalary">Введите зарплату gross</label>
         <form class="calculate__container" action="javascript:resultToDiv()">
-            <input class="calculate__input" type="number" id="grosssalary" value="1000000">
+            <input class="calculate__input" type="number" id="grosssalary" placeholder="1000000">
             <button class="calculate__button" type="submit" id="calculate" >Рассчитать!</button>
         </form>
-        <div class="calculate__result">Зарплата net: <span class="calculate__netsalary" id="netsalary"></span> драм
+        <div class="calculate__result">Зарплата net: <span class="calculate__netsalary" id="netsalary">0</span> драм
         </div>
     </div>
 </main>
