--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="calculate__wrapper">
         <h2 class="visually-hidden ">Введите в поле зарплату до вычета налогов</h2>
         <label class="calculate__label" for="grosssalary">Введите зарплату gross</label>
-        <form class="calculate__container" action="javascript:resultToDiv()">
+        <form class="calculate__form" action="javascript:resultToDiv()">
             <input class="calculate__input" type="number" id="grosssalary" placeholder="1000000">
             <button class="calculate__button" type="submit" id="calculate" >Рассчитать!</button>
         </form>
